--- a/CSS/logIn.css
+++ b/CSS/logIn.css
@@ -1,26 +1,3 @@
-.header{
-    height: auto;
-    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.207),0 2px 2px rgba(0, 0, 0, 0.207);
-    position: relative;
-    z-index: 30;
-    margin-bottom: 32px;
-}
-.header-container{
-    max-width: 1440px;
-    display: flex;
-    justify-content: space-between;
-    margin: 0 auto;
-    height: 100%;
-    padding: 20px 30px;
-}
-
-.logo{
-    height: 51px;
-    width: 51px;
-}
-.logo img{
-    height: 51px;
-}
 
 
 body {
@@ -70,7 +47,7 @@ h2{
     line-height: 1.2;
     transition: all .2s ease;
 	height: 44px;
-	margin-top: 20px;
+	margin-top: 50px;
     margin-left: 295px;
     width: 80px;
 }
@@ -83,7 +60,11 @@ h2{
   margin-top: 60px;
   margin-bottom: 200px;
   width:400px;
-  height: 230px;
+  height: 290px;
   border: 2px solid #75646452;
   border-radius: 4px;
+}
+
+a:link , a:visited{
+	color: black;
 }
