--- a/CSS/main.css
+++ b/CSS/main.css
@@ -31,7 +31,7 @@
 .text h1 {
     color: #E2725B;
     font-weight: 700;
-    font-size: 50px;
+    font-size: 25px;
     text-align: center;
     margin-bottom: 24px;
 }
@@ -82,6 +82,15 @@
         font-size: 14px;
     }
 }
+.first ul {
+    margin-bottom: 40px;
+}
+.first li {
+    font-weight: 600;
+    letter-spacing: 1px;
+    padding-bottom: 10px;
+}
+
 .second .text h1 {
     font-size: 30px;
     letter-spacing: 1px;
